[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
axum = { version = "0.8.4", features = ["tokio", "macros", "http1"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rust-s3 = "0.35.1"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
regex = "1"
base64 = "0.22.1"
tower-http = { version = "0.6.6", features = ["cors"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }